# GameLua

./: CMakeLists.txt  README.md  conanfile.txt
data/: account.csv  chi.traineddata
doc/: 1. Cmake如何区分windows下的Debug和Release静态库.md  10. BMP文件格式详解.md  11. C++ 移动构造函数与复制构造函数.md  12. Tessert-OCR 之提升识别率.md  13. luabridge的基本使用.md  14. Tesseract-OCR 训练字库.md  15. Api Hook 方法  2.Cmake 如何传递依赖.md  3.Leptonica 依赖库编译.md  4. 项目初始时文档.md  5. conan的基本使用.md  6. 项目问题记录.md  7. Window Api.md  8. 项目配置.md  9. Window下屏幕捕获.md
script/: km.lua  test.lua
src/: CMakeLists.txt
src/app/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  main.cpp
src/app/thread/: ThreadLuaRunner.cpp  ThreadLuaRunner.h
src/app/ui/: AppMain.cpp  AppMain.h  Config.h  QTableWind.cpp  QTableWind.h  predefine.h
src/gg/: CMakeLists.txt  ggmain.cpp  ggmain.h
src/gm/: BitMapMem.cpp  BitMapMem.h  CMakeLists.txt  CVHelper.cpp  CVHelper.h  Global.h  KeyMouseMgr.cpp  KeyMouseMgr.h  LuaControl.cpp  LuaControl.h  LuaRegister.cpp  LuaRegister.h  LuaRunner.cpp  LuaRunner.h  OCRHelper.cpp  OCRHelper.h  ScreenMgr.cpp  ScreenMgr.h  WinIoMgr.cpp  WinIoMgr.h  WindowMgr.cpp  WindowMgr.h
src/luaengine/: CMakeLists.txt  LuaEngine.cpp  LuaEngine.h
